the-project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app
          persistentVolumeClaim:
            claimName: todo-app
      containers:
        - name: todo-app
          image: fallmx/todo-app:2.8
          volumeMounts:
          - name: todo-app
            mountPath: /mnt/todo-app
