the-project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8081
